tests/baselines/reference/useObjectValuesAndEntries1.errors.txt
tests/cases/conformance/es2017/useObjectValuesAndEntries1.ts(8,31): error TS2345: Argument of type '1' is not assignable to parameter of type 'object'.


==== tests/cases/conformance/es2017/useObjectValuesAndEntries1.ts (1 errors) ====
    var o = { a: 1, b: 2 };
    
    for (var x of Object.values(o)) {
        let y = x;
    }
    
    var entries = Object.entries(o);
    var entries1 = Object.entries(1);
                                  ~
!!! error TS2345: Argument of type '1' is not assignable to parameter of type 'object'.
    var entries2 = Object.entries({a: true, b: 2})
    var entries3 = Object.entries({})
    